--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
         <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
         <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
         <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-        <script src="mergeRowCell_v1.0.js"></script>
+        <script src="js/merge-cell-v1.0.1.js"></script>
     </head>
     <style>
         .center {
@@ -103,7 +103,7 @@
         </div>
         <script type="application/javascript">
 
-            fnMergeRowCell($("[name=maintbody]"), [0, 1, 2]);
+            fnMergeCell($("[name=maintbody]"), [0, 1, 2]);
         </script>
     </body>
 
